src/styles/layouts/_base.sass
.app
  overflow: hidden


@keyframes slideDown
  from
    transform: translateY(-100%)

  to
    transform: translateY(0%)


.header-wrapper
  background: transparent
  left: 0
  padding: px-to-rem(28px) px-to-rem(30px)
  position: absolute
  right: 0
  top: 0
  transition: background .25s ease
  z-index: 10
  @media(max-width: 1023px)
    background: transparent !important
    padding-bottom: px-to-rem(15px)
    padding-top: px-to-rem(25px)
    position: absolute

    .hamburger
      position: fixed
      right: px-to-rem(30px)
      top: px-to-rem(17px)


  &.fixed
    animation: slideDown .6s ease
    background: $dark
    padding-bottom: px-to-rem(17px)
    padding-top: px-to-rem(17px)
    position: fixed
    @media(max-width: 1023px)
      animation: none
      padding-top: px-to-rem(25px)
      position: absolute


.header
  align-items: center
  display: flex
  justify-content: space-between
  margin: 0 auto
  max-width: 1360px


.nav
  display: flex
  font-size: px-to-rem(14px)
  font-weight: 500
  letter-spacing: px-to-rem(.5px)
  text-transform: uppercase
  @media(max-width: 1023px)
    bottom: 0
    flex-direction: column
    font-size: 14px
    overflow: auto
    position: fixed
    right: -320px
    top: 0
    transition: .5s ease
    width: 320px

    &::before
      background: rgba($black, .5)
      bottom: 0
      content: ''
      left: 0
      opacity: 0
      position: fixed
      right: 0
      top: 0
      transition: inherit
      visibility: hidden

    &.opened
      right: 0

      &::before
        opacity: 1
        visibility: visible


  &__list
    align-items: center
    display: flex
    list-style: none
    margin: 0
    padding: 0
    @media(max-width: 1023px)
      align-items: flex-start
      background: $deep
      flex-direction: column
      height: 100%
      overflow: auto
      padding: 60px 20px 20px
      position: relative


  &__item
    color: $greenish-teal
    margin: 0 px-to-rem(20px)
    transition: .3s ease
    @media(max-width: 1023px)
      margin: 10px auto
      text-align: center


    &:last-child
      margin-right: 0
      @media(max-width: 1023px)
        margin-right: auto


    &:hover,
    &.active
      color: $bluey-grey

    &.active
      pointer-events: none


  &__link
    text-decoration: none

    &:not(.gradient-btn)
      color: inherit
      padding: px-to-rem(9.5px) 0
      position: relative


.hamburger
  display: none
  margin-left: auto
  position: relative
  width: 30px
  z-index: 2
  @media(max-width: 1023px)
    display: block


  &__line
    background: $light
    border-radius: 3px
    display: block
    height: 3px
    margin: 6px 0
    transition: .5s ease

  &.opened
    .hamburger__line
      &:first-child
        transform: rotate(45deg) translate(6px, 6px)
        transform-origin: center

      &:nth-child(2)
        opacity: 0
        transform: translateX(200%)

      &:last-child
        transform: rotate(-45deg) translate(6px, -6px)
        transform-origin: center


.logo
  width: px-to-rem(235px)

  &__link
    display: table


.main
  min-height: 100vh


.footer
  color: $bluey-grey

  &__copyright
    background: $deep
    padding: px-to-rem(36px) 0
    position: relative
    text-align: center

    &::before,
    &::after
      border-style: solid
      bottom: 100%
      content: ''
      height: 0
      position: absolute
      right: 0
      width: 0

    &::before
      border-color: transparent transparent transparent $deep
      border-width: 200px 0 0 1600px
      right: 50%

    &::after
      border-color: transparent $deep transparent transparent
      border-width: 200px 1600px 0 0
      left: 50%

  &__socials,
  &__email
    position: relative
    z-index: 2

  &__socials
    margin-bottom: px-to-rem(50px)
    padding: 0 px-to-rem(30px)

    .socials__link
      margin: 0 px-to-rem(17.5px)

    svg
      transform: scale(.8)

    @media(max-width: 1023px)
      .socials__link
        margin: 0 14px

    @media(max-width: 767px)
      margin-top: 60px

      .socials__link
        margin: 5px 0
        text-align: center
        width: 20%

      svg
        margin: 0 auto


  &__email
    font-size: px-to-rem(16px)
    letter-spacing: px-to-rem(1.6px)
    margin-bottom: px-to-rem(115px)
    text-align: center
    @media(max-width: 767px)
      margin-bottom: 60px


    a
      color: inherit
      text-decoration: none
      transition: .15s ease

      &:hover
        color: $lighter

.telegram-fixed-icon
  align-items: center
  background: #3a8cf4
  border-radius: 50%
  bottom: px-to-rem(20px)
  display: flex
  justify-content: center
  height: px-to-rem(60px)
  position: fixed
  right: px-to-rem(20px)
  width: px-to-rem(60px)
  z-index: 9
  
  svg
    width: 48.35%!important
    height: 48.35%!important
    
    g
      fill: #fff


.languages-list
  display: flex
  justify-content: space-around
  margin: 0 -10px

.languages-list-item
  display: block
  padding: 0 10px
  text-align: center
  text-decoration: none
  width: px-to-rem(255px)

  &__title
    color: $greenish-teal
    font-size: px-to-rem(30px)
    font-weight: normal
    margin: 0 0 px-to-rem(15px)
    text-align: center
    text-transform: uppercase
    @media(max-width: 767px)
      font-size: 18px


.roadmap-block
  margin-top: px-to-rem(155px)
  position: relative
  @media(max-width: 767px)
    margin-top: px-to-rem(100px)


  &__line
    background: $greenish-teal
    bottom: 0
    left: 50%
    position: absolute
    top: 0
    width: 1px
    z-index: 3
    @media(max-width: 767px)
      left: 15px


    &::before,
    &::after
      background: $greenish-teal
      border-radius: 50%
      box-shadow: 0 0 px-to-rem(55px) px-to-rem(9px) rgba($greenish-teal, .83)
      content: ''
      height: px-to-rem(40px)
      left: 50%
      margin-left: px-to-rem(-20px)
      position: absolute
      width: px-to-rem(40px)

    &::before
      top: px-to-rem(-40px)

    &::after
      bottom: px-to-rem(-40px)

  &__list
    padding: px-to-rem(30px) 0
    @media(max-width: 767px)
      padding: 0


.roadmap-item
  align-items: flex-start
  display: flex
  padding: px-to-rem(20px) 0
  @media (min-width: 768px)
    &:nth-child(odd)
      .roadmap-item__date
        text-align: right

        &::after
          right: 0
          transform: translateX(50%)

    &:nth-child(even)
      flex-direction: row-reverse

      .roadmap-item__date
        &::after
          left: 0
          transform: translateX(-50%)

      .roadmap-item__body
        flex-direction: row-reverse
        text-align: right

      .roadmap-item__text
        ul
          padding-left: 100px
          text-align: left

  @media(max-width: 767px)
    flex-direction: column


  &__date,
  &__body
    flex-shrink: 0
    width: 50%
    @media(max-width: 767px)
      width: 100%


  &__date
    padding: px-to-rem(30px) px-to-rem(50px)
    position: relative
    @media(max-width: 767px)
      padding: px-to-rem(20px) 0 px-to-rem(20px) px-to-rem(50px)


    &::after
      background: $greenish-teal
      border: 3px solid #2a5153
      border-radius: 50%
      box-shadow: inset 0 0 .1px 3px #2e3049
      box-sizing: border-box
      content: ''
      height: 24px
      margin-top: -12px
      position: absolute
      top: 50%
      width: 24px
      z-index: 3
      @media(max-width: 767px)
        left: 4px


  &__body
    align-items: flex-start
    display: flex
    @media(max-width: 767px)
      padding-left: px-to-rem(60px)


  &__icon
    align-items: center
    display: flex
    flex-shrink: 0
    height: px-to-rem(87px)
    justify-content: center
    margin: 0 px-to-rem(40px)
    width: 53px
    @media(max-width: 1023px)
      margin: 0 25px
      transform: scale(.8)
    @media(max-width: 767px)
      display: none


  &__date,
  &__title
    color: $greenish-teal
    font-size: px-to-rem(24px)
    margin: 0
    text-transform: uppercase
    @media(max-width: 767px)
      font-size: 16px


  &__text
    color: #8f92b7
    font-weight: 300

    ul
      margin: 1em 0

  &__read-more
    color: #b1b5e5
    cursor: pointer
    display: table
    font-size: 14px
    margin-top: px-to-rem(5px)
    padding-right: 20px
    position: relative
    text-align: right
    text-decoration: none
    text-transform: uppercase
    @media(max-width: 767px)
      margin-left: auto


    &.active
      &::after
        transform: scaleY(-1)

    &::after
      background: url('/static/img/icons/read-more-arrow-top.png')
      content: ''
      height: 5px
      margin-top: -2px
      position: absolute
      right: 0
      top: 50%
      width: 9px

  &__text-hidden
    display: none
    padding-bottom: 1em

    p,
    ul
      &:first-child
        margin-top: 0

      &:last-child
        margin-bottom: 0


.get-in-touch
  &__title
    color: #32ba94
    font-size: px-to-rem(30px)
    font-weight: 400
    margin: px-to-rem(80px) 0 px-to-rem(60px)
    text-align: center
    text-transform: uppercase
    @media(max-width: 767px)
      font-size: 24px
      margin: px-to-rem(60px) 0 px-to-rem(30px)


  .socials
    @media(max-width: 767px)
      width: 100%


    &__link
      color: #8386a8
      @media(max-width: 767px)
        margin: 0
        width: 20%

        svg
          margin: 0 auto


      &:hover
        color: #c9cdff

